<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/navigation_schedule"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="@string/nav_schedule" />
    <item
        android:id="@+id/navigation_calendar"
        android:icon="@android:drawable/ic_menu_month"
        android:title="@string/nav_calendar" />
    <item
        android:id="@+id/navigation_countdown"
        android:icon="@android:drawable/ic_menu_recent_history"
        android:title="@string/nav_countdown" />
    <item
        android:id="@+id/navigation_notes"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/nav_notes" />
</menu>
